@@ -1,3 +1,9 @@
+2023-07-22  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-archive-tests.el (tramp-archive-test49-without-remote-files):
+	* tramp-tests.el (tramp-test49-without-remote-files): New tests.
+	(tramp-test50-unload): Rename.
+
 2023-07-10  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test33-environment-variables): Adapt test.
